--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,8 +24,6 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1"
+    "typescript": "^4.1.3"
   }
 }
