--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "ts-loader": "^8.0.14",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "typescript-transform-paths": "^2.2.0"
   }
 }
