--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,12 +14,14 @@
     "@types/faker": "^5.1.5",
     "faker": "^5.1.0",
     "lodash": "^4.17.20",
+    "ramda": "^0.27.1",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@types/lodash": "^4.14.167",
+    "@types/ramda": "^0.27.34",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
