--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -8,6 +8,7 @@
         "module": "CommonJS",
         "outDir": "dist",
         "downlevelIteration": true,
+        "noImplicitAny": true,
         "baseUrl": "./",
     },
     "ts-node": {
