--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "javascript runtime component assembler(for paas web fundermantal)",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest",
+    "build": "cross-env BUILDEMODE=development webpack"
+  },
   "keywords": [
     "rxjs",
     "paas"
@@ -15,18 +18,23 @@
     "faker": "^5.1.0",
     "lodash": "^4.17.20",
     "ramda": "^0.27.1",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "webpack": "^5.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.167",
     "@types/ramda": "^0.27.34",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
-    "typescript-transform-paths": "^2.2.0"
+    "typescript-transform-paths": "^2.2.0",
+    "webpack-cli": "^4.3.1"
   }
 }
