feat: process render compoents

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -23,6 +23,6 @@
     ],
     "include": [
         "./src/**/*.ts",
-        "../../packages/pipe/src"
+        "../../packages/pipe/src",
     ]
 }
